--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* general styles */
+body{
+    min-height: 100vh;   /* ensures body takes full viewport height */
+    display: flex;      /* enables flexbox layout */
+    flex-direction: column; /* stacks child elements vertically */
+    /* generic project styles */
+    color: #3a3a3a
+}
 /*Header*/
 header{
     background-color:lightcoral;
@@ -10,6 +19,7 @@ header{
 /*main*/
 main{
     background-color:lightblue;
+    flex: 1 0 auto; /* allows main to grow and fill available space, take any surplus space */
 }
 /*footer*/
 footer{
