--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/*google fonts import*/
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,opsz@0,18..144;1,18..144&family=Oswald:wght@200..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -10,7 +13,8 @@ body{
     display: flex;      /* enables flexbox layout */
     flex-direction: column; /* stacks child elements vertically */
     /* generic project styles */
-    color: #3a3a3a
+    color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 /*Header*/
 header{
