--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,12 @@ body{
 }
 /*Header*/
 header{
-    background-color:lightcoral;
+    background-color:#ffffff;
+    padding: 0 1rem; /* horizontal padding */
+    position: fixed; /* Fixes header to the top of the viewport */
+    z-index: 99; /* Ensures header stays above other content */
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 h1{
