--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,18 @@ header{
     box-shadow: 0 2px 2px #3a3a3a;
 }
 
+header a{
+    text-decoration: none;
+    color: inherit; /* Inherits color from parent element */
+}
+
+
+
 h1{
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 /*main*/
 main{
