more work on nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,20 @@ main{
     background-color:lightblue;
     flex: 1 0 auto; /* allows main to grow and fill available space, take any surplus space */
 }
+
+#menu{
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu li{
+    margin-bottom: 1em;
+}
+
+.active{
+    border-bottom: 1px solid #3a3a3a;
+}
 /*footer*/
 footer{
     background-color: orange;
