--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,12 @@ main {
     color: #fafafa;
 }
 
+/* Gallery section */
+#photos img{
+    width: 100%;
+    line-height: 1em;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -200,6 +206,15 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
+
+/* Media query : large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+    }
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -260,6 +275,11 @@ main {
         text-align: end;
         align-self: flex-end;
     }
+
+    /* gallery section */
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -267,6 +287,11 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+}
+
+/*gallery section */
+#photos{
+    column-count:4;
 }
 
 @media screen and (min-width: 1200px) {    
